--- a/troubleshoot/index.html
+++ b/troubleshoot/index.html
@@ -5,17 +5,14 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Daily Time Tracker</title>
-  <meta content="ms excel time tracker troubleshoot" name="description">
-  <meta content="microsoft web addin" name="excel web addin , excel addin ,  free excel web addin">
   <script type="text/javascript">
-    window.location.href = "https://dtt.dlohia.com#troubleshoot"
+    window.location.href = "https://ms-dailytimetracker.dlohia.com#troubleshoot"
   </script>
   
 </head>
 
 <body>
-  If you are not redirected automatically, follow this <a href='https://dtt.dlohia.com#troubleshoot'>link</a>.
+  If you are not redirected automatically, follow this <a href='https://ms-dailytimetracker.dlohia.com#troubleshoot'>link</a>.
 </body>
 
 </html>
