--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -5,19 +5,14 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Daily Time Tracker</title>
-  <meta content="MS ExcelTime Tracker Add-on" name="description">
-  <meta content="microsoft web addin" name="excel web addin , excel addin ,  free excel web addin">
-
   <script type="text/javascript">
-    window.location.href = "https://dtt.dlohia.com#privacyPolicy"
+    window.location.href = "https://ms-dailytimetracker.dlohia.com#privacyPolicy"
   </script>
-  
 
 </head>
 
 <body>
-  If you are not redirected automatically, follow this <a href='https://dtt.dlohia.com#privacyPolicy'>link</a>.
+  If you are not redirected automatically, follow this <a href='https://ms-dailytimetracker.dlohia.com#privacyPolicy'>link</a>.
 </body>
 
 </html>
