--- a/eula/index.html
+++ b/eula/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <script type="text/javascript">
+    window.location.href = "https://ms-dailytimetracker.dlohia.com#eula"
+  </script>
 </head>
 
 <body>
